--- a/src/pages/Usermanagement/userForm.css
+++ b/src/pages/Usermanagement/userForm.css
@@ -8,10 +8,11 @@
     width: 100%;
     padding-top: 50px;
     overflow: auto;
+    overflow: hidden;
 }
 .formwrap-container {
     overflow-y: scroll;
-    overflow: 'hidden';
+    overflow-x: 'hidden';
     height: 100vh;
 }
 
@@ -67,7 +68,6 @@
     box-shadow: 0px 0.9615941643714905px 1.923188328742981px 0px
         rgba(16, 24, 40, 0.05);
     /* padding: 2px 2px 2px 2px; */
-
 }
 .userFormButton {
     display: flex;
