--- a/src/pages/ProjectDashboard/Requirements/Requirements.css
+++ b/src/pages/ProjectDashboard/Requirements/Requirements.css
@@ -5,7 +5,9 @@
     height: 100vh;
     width: 100%;
 }
-
+.category-title {
+    width: 100%;
+}
 .category-title-text {
     background-color: #3575ba;
     background-color: #3575ba;
@@ -71,13 +73,13 @@
 .requirements-Details {
     /* margin-left: 1.75rem;
     margin-top: 0.5rem; */
-    width: 76.36vw;
+    width: 100%;
     padding: 1vh 3vw 0vh 0.9vw;
     overflow-y: scroll;
 }
 .parent-requirement-set {
     float: left;
-    width: 80vw;
+    width: 100%;
     overflow-y: auto;
     height: 100vh;
 }
