--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -38,14 +38,15 @@
     font-weight: 700;
 }
 .image-pic {
-    width: 9rem;
-    height: 7rem;
+    width: 8rem;
+    height: 6rem;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #fff;
     border-radius: 10px;
-    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding : 10px;
+    
 }
 .searchbar {
     margin-top: 10px;
