--- a/src/pages/Usermanagement/userForm.css
+++ b/src/pages/Usermanagement/userForm.css
@@ -6,7 +6,7 @@
     align-items: top;
     height: 100%;
     width: 100%;
-    padding-top: 50px;
+    padding : 50px;
     overflow: auto;
     overflow: hidden;
 }
