--- a/src/pages/ProjectDashboard/ProjectDashboard1.css
+++ b/src/pages/ProjectDashboard/ProjectDashboard1.css
@@ -23,7 +23,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(87, 86, 86, 0.7);
+    background-color: rgba(242, 238, 238, 0.7);
     backdrop-filter: blur(5px);
     z-index: 1000;
     display: flex;
@@ -127,14 +127,6 @@
     text-align: left;
 }
 
-/* .project-table tr:nth-child(odd) {
-    background-color: #f9f9f9;
-  }
-  
-  .project-table tr:nth-child(even) {
-    background-color: #ffffff;
-  }
-   */
 
 .project-table-header {
     display: flex;
@@ -191,4 +183,14 @@
     html {
         font-size: 14px;
     }
+}
+.pdfSection{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.loadingMessage{
+    font-weight: bold;
+    color :#fff;
 }
