--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -101,14 +101,13 @@
 .searchbar {
     display: flex;
     height: 60px;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #b8b6b6;
-    padding: 10px;
-    /* margin-left: 67rem; */
+    padding-left: 3vw;
+    padding-right: 3vw;
 }
 .searchbarright {
-    margin-left: 67rem;
     display: flex;
     gap: 30px;
 }
@@ -123,27 +122,6 @@
     font-weight: 600;
     line-height: normal;
     margin-right: 7.5rem;
-}
-/* For screens with a maximum width of 1200px (typical laptop size) */
-@media (max-width: 1500px) {
-    .searchbarright {
-        margin-right: 17rem; /* Adjust the margin as needed */
-        gap: 20px; /* Adjust the gap as needed */
-    }
-    /* .projects-header {
-        margin-right: 30rem; /* Adjust the margin as needed 
-    } */
-}
-
-/* For screens with a maximum width of 992px (smaller laptop size) */
-@media (max-width: 1300px) {
-    .searchbarright {
-        margin-right: 30rem; /* Adjust the margin as needed */
-        gap: 10px; /* Adjust the gap as needed */
-    }
-    /* .projects-header {
-        margin-right: 1rem; /* Adjust the margin as needed 
-    } */
 }
 
 .create-project {
