--- a/src/pages/ProjectDashboard/TestSet/TestCaseForm.css
+++ b/src/pages/ProjectDashboard/TestSet/TestCaseForm.css
@@ -37,9 +37,12 @@
     gap: 4vw;
 }
 .header-text-testcase {
+    color: #fff;
+    font-family: Poppins;
     font-size: 16px;
-    font-weight: 500;
-    cursor: pointer;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
 }
 .header-text-teststep {
     margin-left: 5px;
@@ -53,4 +56,25 @@
     align-items: center;
     cursor: pointer;
     margin-bottom: 10px;
+}
+.testCaseFormArea {
+    display: inline-block;
+    width: 60vw;
+    border-radius: 4px;
+    border: 1px solid #d9d9d9;
+    margin-bottom: 20px;
+    resize: none;
+}
+.testCaseFormLabel {
+    font-size: 9pt;
+    display: block;
+    margin-bottom: 5px;
+}
+.testCaseFormInput {
+    display: inline-block;
+    border-radius: 4px;
+    border: 1px solid #d9d9d9;
+    width: 423px;
+    height: 44px;
+    margin-bottom: 20px;
 }
