test step form UI

--- a/src/pages/ProjectDashboard/TestSet/TestCaseForm.css
+++ b/src/pages/ProjectDashboard/TestSet/TestCaseForm.css
@@ -1,7 +1,3 @@
-.TesCaseForm-container {
-    padding-left: 8vw;
-    margin: 20px;
-}
 .TestCaseFrom-header {
     background-color: #3575ba;
     color: white;
@@ -48,7 +44,7 @@
     margin-left: 5px;
     font-weight: 600;
     color: #000;
-    font-size: 20px;
+    font-size: 12pt;
 }
 .testStepHeader {
     display: flex;
@@ -62,7 +58,7 @@
     width: 60vw;
     border-radius: 4px;
     border: 1px solid #d9d9d9;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     resize: none;
 }
 .testCaseFormLabel {
@@ -76,5 +72,5 @@
     border: 1px solid #d9d9d9;
     width: 423px;
     height: 44px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
