--- a/src/pages/ProjectDashboard/ProjectDashboard1.css
+++ b/src/pages/ProjectDashboard/ProjectDashboard1.css
@@ -7,14 +7,17 @@
 .dashboard-sidebar {
     background-color: #fff;
     margin: 20px;
+    margin-right: 0;
     border-right: 1px solid rgb(235, 228, 228);
     height: 100vh;
     width: 260px;
-    /* position: fixed; */
+    position: sticky;
 }
 .content-bar {
     width: 83.75vw;
     height: 100vh;
+    padding: 20px;
+    padding-right: 2.75vw;
 }
 .blur-background {
     position: fixed;
