--- a/src/pages/ProjectDashboard/TestSet/TestCaseForm.css
+++ b/src/pages/ProjectDashboard/TestSet/TestCaseForm.css
@@ -58,6 +58,7 @@
     width: 60vw;
     border-radius: 4px;
     border: 1px solid #d9d9d9;
+    padding: 10px;
     margin-bottom: 10px;
     resize: none;
 }
@@ -73,4 +74,15 @@
     width: 423px;
     height: 44px;
     margin-bottom: 10px;
+    padding: 10px;
+}
+.error-message {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+.error-message > p {
+    color: red;
+    font-size: 14px;
 }
