--- a/src/pages/ProjectDashboard/Requirements/Requirements.css
+++ b/src/pages/ProjectDashboard/Requirements/Requirements.css
@@ -171,3 +171,111 @@
 .white-icon {
     color: white !important;
 }
+testscripts-section {
+    width: 76.875vw;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 10rem);
+    column-gap: 150px;
+    row-gap: 60px;
+    flex-wrap: auto;
+
+    margin-top: 20px;
+}
+.testscripts-section.visible {
+    width: 80vw;
+}
+.testscripts-main {
+    border-radius: 7.693px;
+    border: 0.962px solid #d0d5dd;
+    /* background: #eff5fe; */
+    width: 17rem;
+    height: 15rem;
+    display: flex;
+    justify-content: center;
+    transition: all 0.5s ease;
+}
+
+.testscripts-main:hover {
+    background: #eff5fe;
+}
+.testscripts-card {
+    cursor: pointer;
+    width: 15rem;
+    height: 10rem;
+}
+
+.testscripts-card b {
+    color: #000;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: 'Arial';
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    letter-spacing: -0.262px;
+}
+.paragraph {
+    color: #000;
+    font-family: 'Arial';
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.testscripts-image {
+    width: 15rem;
+    height: 10rem;
+    display: flex;
+    justify-content: space-between;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 10px;
+    row-gap: 0.2rem;
+    column-gap: 0.5rem;
+}
+.iconimg {
+    height: 8rem;
+    width: 8rem;
+}
+.icon-border1 {
+    height: 30px;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 7.693px;
+    border: 0.962px solid #d0d5dd;
+    background: #fff;
+    border: 0.962px solid #d0d5dd;
+    background: #fff;
+}
+.edit-pic1 {
+    width: 20px;
+    height: 20px;
+}
+.testscripticonimg-small {
+    align-self: flex-start;
+    display: flex;
+    column-gap: 3px;
+    margin-bottom: 6rem;
+    margin-left: 2rem;
+}
+.testscripts-description {
+    margin-bottom: 2rem;
+}
+.line {
+    height: 2px;
+    background: #b8b6b6;
+}
+.testheader {
+    width: 100%;
+    height: 44px;
+    background: #3575ba;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+}
+.testheader > p {
+    color: #ffff;
+    font-family: Arial;
+    margin-left: 20px;
+}
