--- a/src/pages/ProjectDashboard/components/RequrementSetTable.css
+++ b/src/pages/ProjectDashboard/components/RequrementSetTable.css
@@ -34,7 +34,7 @@
 .requirementSet-card b {
     color: #000;
     font-feature-settings: 'clig' off, 'liga' off;
-    font-family: 'Inter';
+    font-family: 'Arial';
     font-size: 18px;
     font-style: normal;
     font-weight: 600;
@@ -42,7 +42,7 @@
 }
 .paragraph {
     color: #000;
-    font-family: 'Poppins';
+    font-family: 'Arial';
     font-size: 12px;
     font-style: normal;
     font-weight: 700;
