--- a/src/components/ProjectHeader/stickyHeader.css
+++ b/src/components/ProjectHeader/stickyHeader.css
@@ -8,9 +8,9 @@
 }
 .project-title > img {
     display: inline-block;
-    padding-left: 3vw;
+    padding-left: 20px;
     height: 45px;
-    width: 13rem;
+    width: 170px;
 }
 .project-title > p {
     color: #003059;
@@ -23,22 +23,4 @@
 .title-underline {
     height: 0.0625rem;
     background: #b8b6b6;
-}
-.project-header-icons {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    padding-right: 3vw;
-}
-.user-icons {
-    display: flex;
-    width: 2.5rem;
-    height: 2.5rem;
-    padding: 0.7rem 0.7rem;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 0.48081rem;
-    border: 0.962px solid #d0d5dd;
-    background: #fff;
 }
