--- a/src/pages/ProjectDashboard/ProjectDashboard1.css
+++ b/src/pages/ProjectDashboard/ProjectDashboard1.css
@@ -6,18 +6,18 @@
 }
 .dashboard-sidebar {
     background-color: #fff;
-    margin: 20px;
+    margin-left: 20px;
     margin-right: 0;
     border-right: 1px solid rgb(235, 228, 228);
     height: 100vh;
     width: 260px;
     position: sticky;
+    padding-top: 20px;
 }
 .content-bar {
     width: 100%;
     height: 100vh;
     padding: 20px;
-    padding-right: 2.75vw;
     overflow-x: hidden;
     overflow-y: scroll;
 }
