--- a/src/pages/ProjectDashboard/TestSet/TestSetDetails.css
+++ b/src/pages/ProjectDashboard/TestSet/TestSetDetails.css
@@ -17,7 +17,8 @@
     flex-direction: row;
     flex-wrap: wrap;
     gap: 10px;
-    margin-top: 20px;
+
+    padding: 20px;
 }
 .test-set-details-container {
     display: grid;
