--- a/src/pages/ProjectDashboard/ProjectDashboard1.css
+++ b/src/pages/ProjectDashboard/ProjectDashboard1.css
@@ -17,7 +17,8 @@
 .content-bar {
     width: 100%;
     height: 100vh;
-    padding: 20px;
+    padding: 0;
+    margin: 0;
     overflow-x: hidden;
     overflow-y: scroll;
 }
