--- a/src/pages/ProjectDashboard/components/RequrementSetTable.css
+++ b/src/pages/ProjectDashboard/components/RequrementSetTable.css
@@ -5,8 +5,7 @@
     column-gap: 150px;
     row-gap: 60px;
     flex-wrap: auto;
-
-    margin-top: 20px;
+    padding: 20px;
 }
 .requirements-section.visible {
     width: 80vw;
@@ -20,6 +19,7 @@
     display: flex;
     justify-content: center;
     transition: all 0.5s ease;
+    padding: 20px;
 }
 
 .requirementSet-main:hover {
