--- a/src/pages/ProjectDashboard/components/RequrementSetTable.css
+++ b/src/pages/ProjectDashboard/components/RequrementSetTable.css
@@ -1,91 +1,70 @@
 .requirements-section {
-    width: 76.875vw;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 10rem);
-    column-gap: 150px;
-    row-gap: 60px;
-    flex-wrap: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
+
     padding: 20px;
-}
-.requirements-section.visible {
-    width: 80vw;
 }
 .requirementSet-main {
-    border-radius: 7.693px;
-    border: 0.962px solid #d0d5dd;
-    background: #fff;
-    width: 17rem;
-    height: 15rem;
-    display: flex;
-    justify-content: center;
-    transition: all 0.5s ease;
-    padding: 20px;
-}
-
-.requirementSet-main:hover {
-    transform: scale(1.1);
+    width: 180px;
+    height: 170px;
 }
 .requirementSet-card {
-    cursor: pointer;
-    width: 15rem;
-    height: 10rem;
-}
-
-.requirementSet-card b {
-    color: #000;
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-family: 'Arial';
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 600;
-    letter-spacing: -0.262px;
-}
-.paragraph {
-    color: #000;
-    font-family: 'Arial';
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-}
-.requirementSet-image {
-    width: 12rem;
-    height: 10rem;
-    display: flex;
-    justify-content: space-between;
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 10px;
-    row-gap: 1rem;
-    column-gap: 2rem;
-}
-.iconimg {
-    height: 8rem;
-    width: 8rem;
-}
-.icon-border1 {
-    height: 30px;
-    width: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 180px;
+    height: 170px;
     border-radius: 7.693px;
     border: 0.962px solid #d0d5dd;
-    background: #fff;
+    margin-right: 30px;
+}
+.requirementSet-card:hover {
+    background-color: #eff5fe;
+    transition: background-color 0.3s;
+}
+.requirementSet-image {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 148px;
+    height: 80px;
+}
+
+.requireimg {
+    width: 80px;
+    height: 80px;
+    padding: 5px;
+}
+
+.icon-border12 {
+    border-radius: 5px;
     border: 0.962px solid #d0d5dd;
-    background: #fff;
+    width: 22px;
+    height: 22px;
 }
 .edit-pic1 {
     width: 20px;
     height: 20px;
 }
 .iconimg-small {
-    align-self: flex-start;
+    height: 80px;
+    width: 80px;
     display: flex;
-    column-gap: 2px;
-    margin-bottom: 6rem;
-    margin-left: 1rem;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: flex-start;
+    gap: 5px;
+    grid-gap: 5px;
+    margin: 5px 0px 10px 10px;
 }
-.requirement-description {
-    margin-bottom: 2rem;
+.reqtest-description {
+    padding-left: 10px;
+    width: 148px;
+    height: 80px;
+}
+.reqtest-description > b {
+    font-size: 10pt;
+}
+.reqtest-description > p {
+    font-size: 9pt;
 }
