--- a/src/pages/ProjectDashboard/ProjectDashboard1.css
+++ b/src/pages/ProjectDashboard/ProjectDashboard1.css
@@ -201,3 +201,14 @@
 .dashboard-sidebar-subheader {
     display: flex;
 }
+.noitemsselected {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-style: Arial;
+    font-weight: 700;
+
+    color: #b8b6b6;
+    width: 100%;
+    height: 100%;
+}
