--- a/src/pages/ProjectDashboard/TestSet/TestCaseDetails.css
+++ b/src/pages/ProjectDashboard/TestSet/TestCaseDetails.css
@@ -16,9 +16,24 @@
 } */
 .testCaseTable td {
     padding-right: 50px;
+    width: 200px;
 }
 .testDetailsLabel {
     font-size: 9pt;
     font-weight: bold;
+    width: 200px;
     margin-right: 100px;
+}
+.testCaseDetailsView {
+    display: flex;
+    flex-direction: row;
+    border: 1px solid #c1bfbf;
+    margin: 20px;
+    padding: 20px;
+}
+.testCaseDetailsView div {
+    width: 50%;
+}
+.testcaseandsetdetails {
+    margin: 20px;
 }
