--- a/src/pages/ProjectDashboard/components/RequrementSetTable.css
+++ b/src/pages/ProjectDashboard/components/RequrementSetTable.css
@@ -26,8 +26,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 148px;
+    width: 170px;
     height: 80px;
+    padding-right: 0;
 }
 
 .requireimg {
@@ -54,8 +55,7 @@
     justify-content: flex-end;
     align-items: flex-start;
     gap: 5px;
-    grid-gap: 5px;
-    margin: 5px 0px 10px 10px;
+    padding-top: 5px;
 }
 .reqtest-description {
     padding-left: 10px;
