--- a/src/pages/ProjectDashboard/TestSet/TestCaseDetails.css
+++ b/src/pages/ProjectDashboard/TestSet/TestCaseDetails.css
@@ -21,8 +21,13 @@
 .testDetailsLabel {
     font-size: 9pt;
     font-weight: bold;
-    width: 200px;
-    margin-right: 100px;
+    width: 12%;
+}
+.testDetailsLabel b {
+    margin-left: 20px;
+}
+.testDetailsValue {
+    width: 35%;
 }
 .testCaseDetailsView {
     display: flex;
@@ -36,4 +41,51 @@
 }
 .testcaseandsetdetails {
     margin: 20px;
+}
+.editTestCase {
+    height: 20px;
+    width: 20px;
+}
+.TestCaseFrom-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+.editTestCaseDiv {
+    width: 5%;
+    align-self: flex-end;
+}
+.header-text-testcase {
+    width: 95%;
+}
+.editTestDetailsValue {
+    width: 100%;
+    border: 1px solid #c1bfbf;
+}
+.testCaseDetailsButtons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20px;
+    gap: 10px;
+}
+.testCaseDetailsButtonEdit {
+    background-color: #3575ba;
+    color: white;
+    font-weight: 600;
+    font-size: 10pt;
+    padding: 5px;
+    border-radius: 3px;
+    width: 100px;
+}
+.testCaseDetailsButtonCancel {
+    background-color: #696969;
+    color: white;
+    font-weight: 600;
+    font-size: 10pt;
+    padding: 5px;
+    border-radius: 3px;
+    width: 100px;
 }
