--- a/src/pages/ProjectDashboard/TestSet/TestStep/TestStepForm.css
+++ b/src/pages/ProjectDashboard/TestSet/TestStep/TestStepForm.css
@@ -148,3 +148,11 @@
     padding: 0px;
     margin: 0px;
 }
+.testseterrormessage {
+    color: #ff3333;
+    font-size: 10pt;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 20px;
+}
