--- a/src/pages/ProjectDashboard/Requirements/RequirementForm.css
+++ b/src/pages/ProjectDashboard/Requirements/RequirementForm.css
@@ -1,54 +1,84 @@
+.req-mainContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .req-form-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
-
-div.req-form-container > div {
-    max-width: 600px;
-    width: 100%;
+    margin-left: 20px;
+    margin-top: 20px;
     padding: 20px;
-    background-color: white;
-    border-radius: 8px;
-    margin-bottom: 90px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    background-color: #fff;
+    width: 60vw;
 }
 
-.heading {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.heading > h2 {
-    font-weight: bold;
-    font-size: 24px;
+.req-heading {
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 .req-item {
-    margin: 20px;
-    width: 35vw;
-    margin-right: 8px;
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.req-item > select,
+.req-item > input[type='text'] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+.req-item > textarea {
+    width: 100%;
+    height: 329px;
+    border-radius: 4px;
+    border: 1px solid #000;
+    background: rgba(217, 217, 217, 0);
+    padding: 5px;
 }
 
 .req-submit {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-    flex-wrap: wrap;
-    margin-left: 90px;
-    margin-right: 90px;
+    text-align: center;
 }
 
-.req-submit > button {
-    width: 40%;
+.requirementFormButtoncancel {
+    border-radius: 4px;
+    width: 150px;
+    height: 50px;
+    color: #fff;
+    font-family: Arial;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    order: 0.962px solid #696969;
+    background: #696969;
+    margin-left: 50px;
 }
-.requirementFormButtons {
+.requirementFormButtonconfirm {
     background-color: #3575ba;
-    height: 40px;
-    width: 40px;
-    color: white;
-    font-weight: 400;
-    border-radius: 5px;
+    border-radius: 4px;
+    width: 150px;
+    height: 50px;
+    border: 0.962px solid #3575ba;
+    color: #fff;
+    font-family: Arial;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    box-shadow: 0px 0.96159px 1.92319px 0px rgba(16, 24, 40, 0.05);
+}
+.req-item > p {
+    font-family: Arial;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-top: 10px;
 }
