--- a/src/pages/ProjectDashboard/TestSet/TestCaseDetails.css
+++ b/src/pages/ProjectDashboard/TestSet/TestCaseDetails.css
@@ -14,6 +14,11 @@
     display: flex;
     justify-content: space-between;
 } */
+
+.testCaseDetailsView > table {
+    border-collapse: separate;
+    border-spacing: 15px;
+}
 .testCaseTable td {
     padding-right: 50px;
     width: 200px;
@@ -21,26 +26,27 @@
 .testDetailsLabel {
     font-size: 9pt;
     font-weight: bold;
-    width: 12%;
-}
-.testDetailsLabel b {
-    margin-left: 20px;
+    width: 10%;
+    vertical-align: top;
+    text-align: right;
+    white-space: nowrap;
 }
 .testDetailsValue {
-    width: 35%;
+    vertical-align: top;
+    width: 40%;
+    font-size: 9pt;
 }
 .testCaseDetailsView {
     display: flex;
     flex-direction: row;
     border: 1px solid #c1bfbf;
-    margin: 20px;
-    padding: 20px;
+    margin-top: 10px;
+    padding: 5px 5px;
 }
 .testCaseDetailsView div {
     width: 50%;
 }
 .testcaseandsetdetails {
-    margin: 20px;
 }
 .editTestCase {
     height: 20px;
@@ -63,12 +69,13 @@
 .editTestDetailsValue {
     width: 100%;
     border: 1px solid #c1bfbf;
+    font-size: 9pt;
 }
 .testCaseDetailsButtons {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 20px;
+    margin-top: 10px;
     gap: 10px;
 }
 .testCaseDetailsButtonEdit {
